--- a/estilos/css.css
+++ b/estilos/css.css
@@ -8,7 +8,6 @@ body  {
     font-family: 'Roboto', sans-serif;
 }
 .contenedor{
-    width: 33%;
     margin: 1rem auto;
 }
 .titulo, .descripcion{
@@ -59,4 +58,30 @@ body  {
 .botonera{
     display: flex;
     flex-direction: row;
+}
+
+@media only screen and (max-width: 768px) {
+    .contenedor{
+        width: 90%;
+    }
+}
+@media only screen and (min-width: 769px) {
+    .contenedor{
+        width: 80%;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .contenedor{
+        width: 50%;
+    }
+}
+@media only screen and (min-width: 1216px) {
+    .contenedor{
+        width: 40%;
+    }
+}
+@media only screen and (min-width: 1408px) {
+    .contenedor{
+        width: 33%;
+    }
 }
