Se modifico el texto y estilos de la descripcion

--- a/estilos/css.css
+++ b/estilos/css.css
@@ -21,7 +21,7 @@ body  {
 }
 .descripcion p{
     text-align: justify;
-    padding: 1rem;
+    padding: 0.1rem 1rem;
 }
 .descripcion .resaltar_texto{
     font-weight: bold;
