Se agrego en la descripcion un texto informando la version del aplicativo asi como sus estilos

--- a/estilos/css.css
+++ b/estilos/css.css
@@ -28,6 +28,10 @@ body  {
     text-decoration: underline;
     font-style: italic;
 }
+.descripcion .version{
+    text-align: right;
+    font-weight: bold;
+}
 .formulario{
     display: flex;
     flex-direction: column;
