--- a/estilos/css.css
+++ b/estilos/css.css
@@ -53,6 +53,9 @@ body  {
 }
 .formulario input#salida{
     background-color: lightgray;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: center;
 }
 .btn{
     text-align: center;
@@ -116,6 +119,6 @@ body  {
 }
 @media only screen and (min-width: 1408px) {
     .contenedor{
-        width: 33%;
+        width: 25%;
     }
 }
