--- a/estilos/css.css
+++ b/estilos/css.css
@@ -1,31 +1,95 @@
+:root[data-theme="dark"] {
+    /* estilos modo obscuro */
+    --body-bg-color: #0f0e0e;
+    --aside-bg-color: #1F2D40;
+    --main-bg-color: rgba(255, 255, 255, 0.40);
+    --h1-color: #F9F16F;
+    --p-color: #F9F16F;
+    --btn-light-mode-bg: #FFF;
+    --btn-light-mode-p: #000;
+    --focus-bottom-border: #FFF;
+    --input-select-color: #FFF;
+    #btn-dark-mode{
+        display: none;
+    }
+    select option {
+        background-color: var(--body-bg-color);
+    }
+}
+:root[data-theme="light"]{
+    /* estilos modo claro */
+    --body-bg-color: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    --aside-bg-color: #070798;
+    --main-bg-color: rgba(255, 255, 255, 0.40);
+    --h1-color: #FFF;
+    --p-color: #FFF;
+    --btn-dark-mode-bg: #000;
+    --btn-dark-mode-p: #FFF;
+    --focus-bottom-border: red;
+    --input-select-color: #000;
+    #btn-light-mode{
+        display: none;
+    }
+}
 html {
     box-sizing: border-box;
-  }
-  *, *:before, *:after {
+}
+*, *:before, *:after {
     box-sizing: inherit;
 }
 body  {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    background: var(--body-bg-color);
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+.h-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 .contenedor{
-    margin: 0.1rem auto;
+    display: grid;
+    grid-template-areas: 'aside main';
+    grid-template-columns: 50% 50%;
+    box-shadow: 4px 5px 5px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 4px 5px 5px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 5px 5px -1px rgba(0,0,0,0.75);
+    width: 900px;
 }
-.titulo, .descripcion{
-    border-radius: 5px;
+.aside{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-radius: 5px 0 0 5px;
     border-width: 1px;
     border-style: solid;
-    background-color: whitesmoke;
+    border-color: transparent;
+    background-color: var(--aside-bg-color);
+    padding: 0 2rem;
 }
 .titulo h1{
     text-align: center;
+    color: var(--h1-color);
 }
-.descripcion p{
+.descripcion p, .resaltar_texto{
+    color: var(--p-color);
     text-align: justify;
-    padding: 0.1rem 1rem;
+    font-size: 18px;
+    margin-bottom: 5px;
 }
-.descripcion .resaltar_texto{
+.logo img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover
+}
+.resaltar_texto{
     font-weight: bold;
-    text-decoration: underline;
     font-style: italic;
 }
 .descripcion .version{
@@ -36,44 +100,67 @@ body  {
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    border-radius: 5px;
-    border-width: 1px;
-    border-style: solid;
-    margin: 1rem 0;
-    background-color: whitesmoke;
+    border-radius: 0 5px 5px 0;
+    background-color: var(--main-bg-color);
+}
+.ico-label-container{
+    display: flex;    
+    align-items: center;
+}
+.formulario .icon, .btn .icon{
+    width: 30px;
+    filter: invert(13%) sepia(26%) saturate(1065%) hue-rotate(175deg) brightness(95%) contrast(90%);
+    margin-right: 0.5rem;
+}
+.formulario .btn .icon{
+    filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(321deg) brightness(110%) contrast(110%);
 }
 .formulario label{
     font-weight: bold;
 }
 .formulario input,select{
-    text-transform: uppercase;
-    margin: 0.50rem auto;
-    width: 50%;
-    border-radius: 2.5px;
+    text-transform: uppercase; /*texto en mayúsculas*/
+    margin: 2px auto;
+    border: none;          /* Sin borde */
+    border-bottom: 1px solid #000;  /* Borde inferior */
+    outline: none;         /* Sin borde de enfoque */
+    width: 80%;           /* Ancho completo del contenedor */
+    box-sizing: border-box; /* Incluir padding y borde en el ancho total */
+    background-color: transparent; /* Color de fondo */
+    text-align: center;
+    color: var(--input-select-color);
+}
+.formulario input:focus,select:focus{
+    border-bottom: 1px solid var(--focus-bottom-border);  /* Borde inferior */
 }
 .formulario input#salida{
-    background-color: lightgray;
     font-weight: bold;
     font-size: 16px;
     text-align: center;
 }
 .btn{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
-    margin: 0.1rem auto;
-    width: 100px;
+    margin: 1rem auto;
+    width: 130px;
     padding: 0.25rem;
     border-radius: 5px;
     color: white;
     border-style: solid;
-    border-color: black;
+    border-color: transparent;
     border-width: 1px;
-    background-color: #969c9e;
+    background-color: #1f2d40;
+    height: 45px;
 }
 .btn:hover{
     cursor: pointer;
-    color: #969c9e;
+    color: #1f2d40;
     background-color: #fff;
+}
+.btn:hover .icon{
+    filter: brightness(0) saturate(100%) invert(0%) sepia(100%) saturate(7431%) hue-rotate(351deg) brightness(90%) contrast(114%);
 }
 .btn_resaltado{
     background-color: #246d8a;
@@ -82,43 +169,70 @@ body  {
     background-color: white;
     color: #246d8a;
 }
+#btn_copiar{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+#btn_copiar:hover{
+    background-color: #fff;
+    color: rgba(0, 0, 0, 0.5);
+}
 .botonera{
+    height: 100%;
     display: flex;
-    flex-direction: row;
+    align-items: center;
 }
 .obligatorio{
     font-weight: bold;
     color: red;
     font-size: 18px;
 }
-@media only screen and (max-width: 768px) {
-    .contenedor{
-        width: 90%;
+.typing-container {
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    animation: typing 4s steps(30, end), blink-caret 0.75s step-end infinite;
+}
+@keyframes typing {
+    from {
+        width: 0;
     }
-    .formulario input,select{
-        width: 80%;
+    to {
+        width: 100%;
     }
 }
-@media only screen and (min-width: 769px) {
-    .contenedor{
-        width: 80%;
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
     }
-    .formulario input,select{
-        width: 60%;
-    }
-}
-@media only screen and (min-width: 1024px) {
-    .contenedor{
-        width: 50%;
+    50% {
+        border-color: var(--h1-color);
     }
 }
-@media only screen and (min-width: 1216px) {
-    .contenedor{
-        width: 40%;
-    }
+.container-btn-user-mode{
+    position: absolute;
+    display: flex;
+    justify-content: right;
+    width: 100%;
+    top: 0;
 }
-@media only screen and (min-width: 1408px) {
-    .contenedor{
-        width: 25%;
-    }
+.container-btn-user-mode #btn-light-mode, #btn-dark-mode{
+    width: 190px;
+    margin: 0.25rem;
+    padding: 0.1rem 2rem;
+    border-style: solid;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+}
+.container-btn-user-mode #btn-light-mode:hover, #btn-dark-mode:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+.container-btn-user-mode #btn-light-mode{
+    background-color: var(--btn-light-mode-bg);
+    color: var(--btn-light-mode-p);
+}
+.container-btn-user-mode #btn-dark-mode{
+    background-color: var(--btn-dark-mode-bg);
+    color: var(--btn-dark-mode-p);
 }
