--- a/estilos/css.css
+++ b/estilos/css.css
@@ -84,12 +84,11 @@ body  {
 .logo img{
     width: 150px;
     height: 150px;
+    object-fit: cover;
+    background: var(--main-bg-color);
     border-radius: 50%;
-    overflow: hidden;
-    object-fit: cover
 }
 .resaltar_texto{
-    font-weight: bold;
     font-style: italic;
 }
 .descripcion .version{
@@ -223,6 +222,7 @@ body  {
     border-radius: 5px;
     font-weight: bold;
     text-align: center;
+    border-width: 1px;
 }
 .container-btn-user-mode #btn-light-mode:hover, #btn-dark-mode:hover{
     cursor: pointer;
@@ -236,3 +236,42 @@ body  {
     background-color: var(--btn-dark-mode-bg);
     color: var(--btn-dark-mode-p);
 }
+/* Móviles */
+@media only screen and (max-width: 600px) {
+    .container-btn-user-mode{
+        position: inherit;
+    }
+    .h-container{
+        margin: 1rem;
+    }
+    .contenedor{
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .titulo h1{
+        font-size: 1.5rem;
+    }
+    .botonera{
+        flex-direction: column-reverse;
+    }
+    .btn{
+        width: 90%;
+        margin: 0.2rem;
+    }
+  }
+  
+  /* Tabletas */
+  @media only screen and (min-width: 601px) and (max-width: 1023px) {
+    .container-btn-user-mode{
+        position: inherit;
+    }
+    .h-container{
+        margin: 1rem;
+    }
+    .contenedor{
+        width: 70%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+  }
