Se modificaron los estilos

--- a/estilos/estyles.css
+++ b/estilos/estyles.css
@@ -68,6 +68,7 @@ body{
     outline: none;
     text-transform: uppercase;
     border: 0.125rem solid var(--border-color);
+    background-color: transparent;
 }
 .label-input-container label{
     position: absolute;
