Se implementó la funcionalidad PWA, se agregaron estilos al focus en los botones, se actualizó el archivo README y se creó el archivo LICENCE

--- a/estilos/estyles.css
+++ b/estilos/estyles.css
@@ -123,6 +123,9 @@ body{
     cursor: pointer;
     background-color: var(--btn-hover-bg-color);
 }
+.btn:active{
+    filter: brightness(70%);
+}
 a{
     text-decoration: none;
     color: var(--text-color);
